--- a/bloc_generator/pubspec.yaml
+++ b/bloc_generator/pubspec.yaml
@@ -2,7 +2,7 @@ name: bloc_generator
 description: >
     Automatic BLoC generator that will generate BLoC architected code
     automatically from bloc_annotations.
-version: 0.5.0
+version: 0.5.1
 author: Callum Iddon <iddoncallum@gmail.com>
 homepage: https://github.com/CallumIddon/bloc_generator/
 
@@ -15,7 +15,7 @@ dependencies:
   meta: ^1.1.6
   source_gen: ^0.9.0
 
-  bloc_annotations: 0.5.0
+  bloc_annotations: ^0.5.1
 
 dev_dependencies:
   build_runner: ^1.1.0
