--- a/bloc_generator/pubspec.yaml
+++ b/bloc_generator/pubspec.yaml
@@ -2,20 +2,21 @@ name: bloc_generator
 description: >
     Automatic BLoC generator that will generate BLoC architected code
     automatically from bloc_annotations.
-version: 0.5.1
+version: 0.6.0
 author: Callum Iddon <iddoncallum@gmail.com>
 homepage: https://github.com/CallumIddon/bloc_generator/
 
 environment:
-  sdk: ">=2.0.0 <3.0.0"
+  sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
-  analyzer: ^0.33.0
+  analyzer: ^0.36.3
   build: ^1.0.1
+  code_builder: ^3.2.0
   meta: ^1.1.6
   source_gen: ^0.9.0
 
-  bloc_annotations: ^0.5.1
+  bloc_annotations: ^0.6.0
 
 dev_dependencies:
-  build_runner: ^1.1.0
+  build_runner: ^1.4.0
