--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -11,18 +11,18 @@ dependencies:
   flutter:
     sdk: flutter
 
-  rxdart: ^0.19.0
+  rxdart: ^0.22.0
 
-  bloc_annotations: ^0.5.1
-  flutter_bloc_provider: ^0.5.1
+  bloc_annotations: ^0.6.0
+  flutter_bloc_provider: ^0.6.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  build_runner: 1.0.0
+  build_runner: ^1.4.0
 
-  bloc_generator: ^0.5.1
+  bloc_generator: ^0.6.0
 
 flutter:
   uses-material-design: true
